fixed a bug where resources were being used when they shouldn't be, fixed bottom/progressive bar spacing and move subtract function to utils

--- a/src/components/item/components/footer/footer.css
+++ b/src/components/item/components/footer/footer.css
@@ -5,7 +5,7 @@
   margin: 0;
   background: rgba(150,150,150,0.5);
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: calc(100%/3) calc(100%/3) calc(100%/3);
 }
 
 .build-time {
